@@ -339,6 +339,10 @@ Working version
   constructor disambiguation.
   (Jacques Garrigue, report and review by Thomas Refis)
 
+- #8917, #8929, #9889, #10219: fix printing of nested recursive definitions
+  in presence of a name collision.
+  (Florian Angeletti, report by Thomas Refis, review by Gabriel Scherer)
+
 - #9936: Make sure that `List.([1;2;3])` is printed `[1;2;3]` in the toplevel
   by identifying lists by their types.
   (Florian Angeletti, review by Gabriel Scherer)
